--- a/ProjetoCadastro.lpi
+++ b/ProjetoCadastro.lpi
@@ -26,6 +26,15 @@
     </RunParams>
     <RequiredPackages>
       <Item>
+        <PackageName Value="FCL"/>
+      </Item>
+      <Item>
+        <PackageName Value="zcomponentdesign"/>
+      </Item>
+      <Item>
+        <PackageName Value="zcomponent"/>
+      </Item>
+      <Item>
         <PackageName Value="LCL"/>
       </Item>
     </RequiredPackages>
@@ -38,6 +47,7 @@
         <Filename Value="unitprincipal.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="FormPrincipal"/>
+        <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="unitPrincipal"/>
       </Unit>
@@ -45,8 +55,20 @@
         <Filename Value="unitclientes.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="FormClientes"/>
+        <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="unitClientes"/>
+      </Unit>
+      <Unit>
+        <Filename Value="unitdm.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="DM"/>
+        <ResourceBaseClass Value="DataModule"/>
+        <UnitName Value="unitDM"/>
+      </Unit>
+      <Unit>
+        <Filename Value="minhas_funcoes.pas"/>
+        <IsPartOfProject Value="True"/>
       </Unit>
     </Units>
   </ProjectOptions>
